--- a/AsteroidsDeluxe/Asteroids.vcxproj.filters
+++ b/AsteroidsDeluxe/Asteroids.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="EnemyPod.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerChase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asteroids.h">
@@ -135,6 +138,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EnemyPod.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerChase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
