--- a/AsteroidsDeluxe/Asteroids.vcxproj.filters
+++ b/AsteroidsDeluxe/Asteroids.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="PlayerChase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyShared.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asteroids.h">
@@ -141,6 +144,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlayerChase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyShared.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
